--- a/AgeCurious/app/src/main/res/layout/activity_main.xml
+++ b/AgeCurious/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,8 @@
         android:layout_height="wrap_content"
         android:text="@string/check_button_text"
         android:layout_marginBottom="16dp"
+        android:fontFamily="casual"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/date_of_birth"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,11 +32,13 @@
 
     <TextView
         android:id="@+id/mainActivity_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/what_s_your_birth_date"
         android:textSize="18sp"
-        android:layout_marginBottom="16dp"
+        android:layout_margin="16dp"
+        android:fontFamily="casual"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/date_of_birth"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
