--- a/AgeCurious/app/src/main/res/values/themes.xml
+++ b/AgeCurious/app/src/main/res/values/themes.xml
@@ -1,8 +1,9 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.AgeCurious" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.AgeCurious" parent="Theme.AppCompat.Light">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorButtonNormal">@color/light_blue</item>
+        <item name="colorAccent">@color/light_blue</item>
     </style>
 
     <style name="Theme.AgeCurious" parent="Base.Theme.AgeCurious" />
